Fix css not loading and flickering

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Colfaxx,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    font-family: sans-serif;
     color: #333;
     margin: 20px;
     overflow-x: hidden;
@@ -22,7 +22,7 @@ body {
 
 
 .contained {
-    max-width: 960px;
+    max-width: 1100px;
     margin: auto;
 }
 
@@ -69,4 +69,14 @@ body {
     cursor: pointer;
     /* background:  #3f51b5; */
     color: #FFF874 !important;
+}
+
+.primaryColor {
+    color: white;
+    background-color: #3f51b5;
+}
+
+nav a {
+    text-decoration: none;
+    color: inherit
 }
